<resources>
    <string name="app_name">Ystrip</string>
    <string name="lable_name">Boothtify</string>
    <string name="Button_text">Hitung</string>
    <string name="createAccount">Create Account</string>
    <string name="Login">Log In</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="welcome">Welcome =)</string>et's choose your photo and print it
    <string name="subTitle">Hi there!! \nCome in and start creating Turn your spontaneous moments into stylish photos and share your joy with us</string>
    <string name="back_btn">&lt; Back</string>
    <string name="welcome_main">Welcome!</string>
    <string name="welcome_back">Welcome back!</string>"
    <string name="text_welcome">Lets choose your photo \nand print it</string>
    <string name="subTitle_welcome_back">New memories await \nLog in and start capturing your unforgettable moments</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="full_name">Enter full name</string>
    <string name="get_started">Get Started</string>
    <string name="subTitle_sigin">Join now! Create your account in minutes and start capturing every important moment</string>
    <string name="welcome_title">Hi</string>
    <string name="cam">Camera</string>
    <string name="upload_photo">Upload</string>
    <string name="des_content1">Camera</string>
    <string name="des_content2">Upload</string>
    <string name="profile">Profile</string>
    <string name="des_content3">Profile</string>
    <string name="des_content5">Button</string>
    <string name="title_user">Boothtify!</string>
    <string name="page_home">Home</string>
    <string name="des_content4">Notification</string>
    <string name="features">Features</string>
</resources>
